--- a/src/App.css
+++ b/src/App.css
@@ -284,6 +284,7 @@ header nav ul li a.active::after,
       display: flex;
       align-items: center;
       overflow: hidden;
+      padding-bottom: 30px;
 }
 .hero-section-content{
      display: grid;
@@ -644,12 +645,19 @@ header nav ul li a.active::after,
 }
 
 .services-section-row{
-      display: grid;
-      grid-template-columns: repeat(3,1fr);
+      /* display: grid;
+      grid-template-columns: repeat(3,1fr); */
+      display: flex;
       gap: 30px;
       margin-top: 50px;
+      flex-wrap: wrap;
+      justify-content: center;
 }
 
+.service-moja{
+       max-width: 380px;
+       flex-shrink: 0;
+}
 .service-moja .service-icon{
        width: 60px;
        height: 60px;
@@ -679,7 +687,18 @@ header nav ul li a.active::after,
        width: 90%;
        margin: auto;
 }
-
+.service-moja a{
+      display: flex;
+      margin-top: 20px;
+      justify-content: center;
+      gap: 5px;
+      font-weight: 600;
+      color: var(--main-color);
+}
+.service-moja a span{
+      display: flex;
+      margin-top: 3px;
+}
 .service-btn{
       display: flex;
       justify-content: center;
@@ -773,6 +792,11 @@ header nav ul li a.active::after,
       font-size: 14px;
       font-weight: 500;
       color:rgb(86, 86, 86);
+}
+.pricing-moja h2{
+        font-size: 25px;
+        font-weight: 300;
+        margin: 20px 0;
 }
 .pricing-moja select{
   width: 100%;
@@ -883,16 +907,30 @@ header nav ul li a.active::after,
       padding: 80px 0 0 0;
       background-color: white;;
 }
-
+.testimonial-section-v2{
+      padding: 80px 0;
+}
 .testimonial-intro{
      display: grid;
      grid-template-columns: 1fr 1fr;
      align-items: end;
 }
+.testimonial-section-v2 .testimonial-intro{
+        grid-template-columns: 1fr;
+        text-align: center;
+}
+.testimonial-section-v2 .testimonial-intro h3{
+        font-size: 40px;
+        text-transform: capitalize;
+}
 .testimonial-intro p{
       font-size: 18px;;
       line-height: 30px;
       margin-bottom: 20px;
+}
+.testimonial-section-v2 .testimonial-intro p{
+       width: 800px;
+       margin: 10px auto;
 }
 .testimonials-row{
   margin-top: 50px;
@@ -913,9 +951,21 @@ header nav ul li a.active::after,
 }
 .testimonial-moja p{
    line-height: 30px;
-   margin-bottom: 10px;
+   margin-bottom: 20px;
 }
-
+.testimonial-moja .profile{
+       border-top: 1px solid rgba(192, 192, 192, 0.301);
+       padding-top: 10px;
+}
+.testimonial-section-v2 .testimonial-moja h5{
+      font-size: 16px;
+      font-weight: 500;
+      color: rgb(86, 86, 86);
+      margin-top: 5px;
+}
+.testimonial-moja .profile h4{
+      font-size: 18px;
+}
 /* -- Frequently Asked Questions -- */
 .faqs-section{
       padding: 100px 0;
@@ -1691,6 +1741,9 @@ footer{
        .navigation-part{
               width: 100%;
               order: 2;
+       }
+       .testimonial-section-v2 .testimonial-intro p{
+             width: 100%;
        }
 }
 @media(max-width: 768px){
